--- a/ML_Lab_Final_Project.ipynb
+++ b/ML_Lab_Final_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTcBOS1jeFqBE7INyLnJrg",
+      "authorship_tag": "ABX9TyOuSJEqKm9z1JMF2bGkzkk+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hkDE1-ezbwgc",
-        "outputId": "3846b46a-a6dd-4d4f-d756-cbb2c377af67"
+        "outputId": "6a4183b3-e356-45f5-d97e-e06195768b50"
       },
       "outputs": [
         {
@@ -43,108 +43,114 @@
           "text": [
             "***************BOOK RECOMMENDATION SYSTEM********************\n",
             "**************************************************************\n",
-            "TEAM MEMBERS\n",
-            "AP22110011636 -- SOURCE CODE AND DATA\n",
-            "AP22110011618 -- REFERENCE AND PPT\n",
-            "AP22110010065 -- PPT \n",
-            "AP22110011664 -- REFERENCE DATA\n",
-            "**************************************************************\n",
-            "Enter user ID: 2\n",
-            "Enter book title: Something\n",
-            "Enter number of recommendations:1\n",
-            "Books similar to 'Something' for user with ID 2:\n",
-            " ['To Kill a Mockingbird']\n"
+            "Enter your User ID: 15\n",
+            "Enter book title you like: Human\n",
+            "Enter number of recommendations: 5\n",
+            "\n",
+            "Books similar to 'Human' for user ID 15:\n",
+            "\n",
+            "1. Member stay serious\n",
+            "2. At material mother quality\n",
+            "3. Clear million entire feeling participant\n",
+            "4. Next single\n",
+            "5. There man management agency single\n"
           ]
         }
       ],
       "source": [
         "import pandas as pd\n",
+        "import numpy as np\n",
         "from math import sqrt\n",
         "import warnings\n",
-        "print(\"***************BOOK RECOMMENDATION SYSTEM********************\");\n",
-        "print(\"**************************************************************\");\n",
-        "print(\"TEAM MEMBERS\");\n",
-        "print(\"AP22110011636 -- SOURCE CODE AND DATA\");\n",
-        "print(\"AP22110011618 -- REFERENCE AND PPT\");\n",
-        "print(\"AP22110010065 -- PPT \");\n",
-        "print(\"AP22110011664 -- REFERENCE DATA\");\n",
-        "print(\"**************************************************************\");\n",
-        "warnings.filterwarnings(\"ignore\", category=FutureWarning, module=\"openpyxl.utils\")\n",
-        "warnings.filterwarnings(\"ignore\", category=UserWarning, module=\"openpyxl.styles\")\n",
-        "books = pd.read_excel('books3.xlsx')\n",
-        "ratings = pd.read_excel('ratings2.xlsx')\n",
-        "users = pd.read_excel('users2.xlsx')\n",
         "\n",
-        "book_data = []\n",
-        "for _, rating_row in ratings.iterrows():\n",
-        "    for _, book_row in books.iterrows():\n",
-        "        if rating_row['book_id'] == book_row['book_id']:\n",
-        "            book_data.append({**rating_row, **book_row})\n",
+        "print(\"***************BOOK RECOMMENDATION SYSTEM********************\")\n",
+        "print(\"**************************************************************\")\n",
         "\n",
-        "book_data = pd.DataFrame(book_data)\n",
-        "full_data = []\n",
-        "for _, book_row in book_data.iterrows():\n",
-        "    for _, user_row in users.iterrows():\n",
-        "        if book_row['user_id'] == user_row['user_id']:\n",
-        "            full_data.append({**book_row, **user_row})\n",
+        "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+        "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
         "\n",
-        "full_data = pd.DataFrame(full_data)\n",
+        "# Load data\n",
+        "books = pd.read_excel('books_dataset.xlsx')\n",
+        "ratings = pd.read_excel('ratings.xlsx')\n",
+        "users = pd.read_excel('users.xlsx')\n",
         "\n",
-        "unique_categories = full_data['category'].unique()\n",
-        "category_encoded = pd.DataFrame([[1 if full_data['category'][i] == category else 0 for category in unique_categories] for i in range(len(full_data))], columns=[f\"category_{category}\" for category in unique_categories])\n",
+        "# Merge ratings with books\n",
+        "book_data = pd.merge(ratings, books, on='book_id', how='inner')\n",
         "\n",
-        "feature_matrix = pd.concat([full_data[['user_id', 'book_id', 'rating']].reset_index(drop=True), category_encoded.reset_index(drop=True)], axis=1)\n",
+        "# Merge with user data\n",
+        "full_data = pd.merge(book_data, users, on='user_id', how='inner')\n",
         "\n",
-        "user_book_matrix = {}\n",
-        "for _, row in feature_matrix.iterrows():\n",
-        "    user_id, book_id, rating = row['user_id'], row['book_id'], row['rating']\n",
-        "    if user_id not in user_book_matrix:\n",
-        "        user_book_matrix[user_id] = {}\n",
-        "    user_book_matrix[user_id][book_id] = rating\n",
+        "# One-hot encode categories\n",
+        "category_encoded = pd.get_dummies(full_data['category'], prefix='category')\n",
         "\n",
-        "book_ids = feature_matrix['book_id'].unique()\n",
-        "for user_ratings in user_book_matrix.values():\n",
-        "    for book_id in book_ids:\n",
-        "        if book_id not in user_ratings:\n",
-        "            user_ratings[book_id] = 0\n",
+        "# Combine features\n",
+        "feature_matrix = pd.concat([full_data[['user_id', 'book_id', 'rating']], category_encoded], axis=1)\n",
+        "\n",
+        "# Create user-book rating matrix\n",
+        "user_book_matrix = feature_matrix.pivot_table(index='user_id', columns='book_id', values='rating').fillna(0)\n",
+        "\n",
+        "# Cache for faster distance calculation\n",
+        "book_vectors = user_book_matrix.T.to_numpy()\n",
+        "book_id_list = user_book_matrix.columns.to_list()\n",
         "\n",
         "def euclidean_distance(vec1, vec2):\n",
-        "    return sqrt(sum((vec1[i] - vec2[i]) ** 2 for i in range(len(vec1))))\n",
+        "    return np.linalg.norm(vec1 - vec2)\n",
         "\n",
         "def recommend_books(user_id, book_title, n_recommendations=5):\n",
         "    if book_title not in books['title'].values:\n",
         "        return \"Book not found in the dataset.\"\n",
         "\n",
-        "    book_id = books[books['title'] == book_title]['book_id'].values[0]\n",
-        "    if book_id not in book_ids:\n",
-        "        return \"Book not found in the ratings data.\"\n",
+        "    if user_id not in users['user_id'].values:\n",
+        "        return \"User ID not found.\"\n",
         "\n",
-        "    user_age = users[users['user_id'] == user_id]['age'].values[0]\n",
-        "    book_ratings = [user_book_matrix[u].get(book_id, 0) for u in user_book_matrix]\n",
+        "    book_id = books[books['title'] == book_title]['book_id'].values[0]\n",
+        "\n",
+        "    try:\n",
+        "        book_idx = book_id_list.index(book_id)\n",
+        "    except ValueError:\n",
+        "        return \"Book ID not found in user-book matrix.\"\n",
+        "\n",
+        "    user_age = users.loc[users['user_id'] == user_id, 'age'].values[0]\n",
+        "    input_vector = book_vectors[book_idx]\n",
         "\n",
         "    distances = []\n",
-        "    for other_book_id in book_ids:\n",
-        "        if other_book_id == book_id:\n",
+        "    for i, other_vector in enumerate(book_vectors):\n",
+        "        if i == book_idx:\n",
         "            continue\n",
-        "        other_book_ratings = [user_book_matrix[u].get(other_book_id, 0) for u in user_book_matrix]\n",
-        "        distance = euclidean_distance(book_ratings, other_book_ratings)\n",
-        "        distances.append((distance, other_book_id))\n",
+        "        dist = euclidean_distance(input_vector, other_vector)\n",
+        "        distances.append((dist, book_id_list[i]))\n",
+        "\n",
+        "    # Sort by similarity (smallest distance)\n",
         "    distances.sort()\n",
         "    recommendations = []\n",
-        "    for _, similar_book_id in distances[:n_recommendations + 1]:\n",
-        "        similar_book_title = books[books['book_id'] == similar_book_id]['title'].values[0]\n",
-        "        book_age_group = books[books['book_id'] == similar_book_id]['target_age_group'].values[0]\n",
-        "        if user_age >= book_age_group:\n",
-        "            recommendations.append(similar_book_title)\n",
-        "            if len(recommendations) >= n_recommendations:\n",
-        "                break\n",
+        "    for _, sim_book_id in distances:\n",
+        "        sim_book_info = books[books['book_id'] == sim_book_id]\n",
+        "        sim_title = sim_book_info['title'].values[0]\n",
+        "        sim_age = sim_book_info['target_age_group'].values[0]\n",
         "\n",
-        "    return recommendations\n",
-        "user_id = int(input(\"Enter Your user ID: \"))\n",
-        "book_title = input(\"Enter book title for which you need similar books: \")\n",
-        "n_recommendations = int(input(\"Enter number of recommendations:\"));\n",
-        "recommended_books = recommend_books(user_id, book_title, n_recommendations)\n",
-        "print(f\"Books similar to '{book_title}' for user with ID {user_id}:\\n\", recommended_books)"
+        "        if user_age >= sim_age:\n",
+        "            recommendations.append(sim_title)\n",
+        "\n",
+        "        if len(recommendations) >= n_recommendations:\n",
+        "            break\n",
+        "\n",
+        "    return recommendations if recommendations else [\"No suitable recommendations found.\"]\n",
+        "\n",
+        "# --------------------------\n",
+        "# User Input\n",
+        "# --------------------------\n",
+        "try:\n",
+        "    user_id = int(input(\"Enter your User ID: \"))\n",
+        "    book_title = input(\"Enter book title you like: \").strip()\n",
+        "    n_recommendations = int(input(\"Enter number of recommendations: \"))\n",
+        "\n",
+        "    recommended_books = recommend_books(user_id, book_title, n_recommendations)\n",
+        "    print(f\"\\nBooks similar to '{book_title}' for user ID {user_id}:\\n\")\n",
+        "    for i, rec in enumerate(recommended_books, 1):\n",
+        "        print(f\"{i}. {rec}\")\n",
+        "\n",
+        "except ValueError:\n",
+        "    print(\"Invalid input. Please enter numeric values for User ID and recommendation count.\")\n"
       ]
     },
     {
